Fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -66,9 +66,6 @@ nav{
 }
 
 @media screen and (max-width:768px){
-    body{
-        overflow-y: hidden;
-    }
     .nav_links{
         position: absolute;
         height: 40vh;
